--- a/index.html
+++ b/index.html
@@ -82,6 +82,104 @@
         <script type="text/javascript" src="/public/js/index.js"></script>
     </head>
     <body>
+        <div class="loading-screen">
+            <div class="loading-animation-container">
+                <div class="loading-signature-logo">
+                    <div class="loading-screen-starter">
+                        <svg
+                            version="1.0"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="231.000000pt"
+                            height="258.000000pt"
+                            viewBox="0 0 231.000000 258.000000"
+                            preserveAspectRatio="xMidYMid meet"
+                            class="signature-y"
+                        >
+                            <g
+                                transform="translate(0.000000,258.000000) scale(0.100000,-0.100000)"
+                                fill="#000000"
+                                stroke="none"
+                            >
+                                <path
+                                    d="M15 2557 c-3 -7 -4 -120 -3 -252 l3 -240 124 -5 125 -5 111 -180 c61
+-99 157 -255 213 -347 l102 -168 -210 0 -210 0 0 65 0 65 -125 0 -125 0 2
+-322 3 -323 122 -3 122 -3 3 68 3 68 312 3 313 2 0 -229 0 -230 -87 -3 -88 -3
+0 -250 0 -250 430 0 430 0 0 250 0 250 -87 3 -88 3 0 230 0 229 313 -2 312 -3
+3 -68 3 -68 122 3 122 3 3 323 2 322 -125 0 -125 0 0 -65 0 -65 -210 0 -210 0
+84 138 c46 75 142 232 213 347 l129 210 127 3 127 3 -2 252 -3 252 -435 0
+-435 0 -3 -248 c-2 -244 -2 -249 18 -254 12 -3 20 -9 18 -13 -6 -16 -302 -499
+-304 -497 -4 4 -304 500 -304 502 0 2 9 5 20 8 20 5 20 12 18 254 l-3 248
+-433 3 c-344 2 -434 0 -437 -11z"
+                                />
+                            </g>
+                        </svg>
+                        <div class="progress-bar-container">
+                            <div class="progress-bar"></div>
+                        </div>
+                    </div>
+                    <svg class="circular-border">
+                        <circle cx="175" cy="175" r="175"></circle>
+                    </svg>
+                    <div class="circle-border"></div>
+
+                    <script>
+                        const numCircles = 52; // Number of small circles
+                        const radius = 142; // Radius from the center of the circle to place small circles
+                        const circleBorder = document.querySelector('.circle-border');
+
+                        for (let i = 0; i < numCircles; i++) {
+                            const angle = (i * 360) / numCircles; // Angle in degrees
+                            const radians = angle * (Math.PI / 180); // Convert to radians
+
+                            const x = radius * Math.cos(radians) + circleBorder.offsetWidth / 2 - 8; // Adjusting for circle size
+                            const y =
+                                radius * Math.sin(radians) + circleBorder.offsetHeight / 2 - 8; // Adjusting for circle size
+
+                            const smallCircle = document.createElement('div');
+                            smallCircle.className = 'small-circle';
+                            smallCircle.style.left = `${x}px`;
+                            smallCircle.style.top = `${y}px`;
+
+                            circleBorder.appendChild(smallCircle);
+                        }
+                    </script>
+                </div>
+                <img src="/public/img/logo_hand.png" alt="Logo hand" class="logo-hand" />
+                <div class="logo-dirty-container">
+                    <div
+                        class="item-group"
+                        xyz="fade-100% down-3 in-delay-52 in-duration-8 out-duration-0"
+                    >
+                        <img src="/public/img/logo_dirty.png" alt="Logo Dirty" class="xyz-out" />
+                    </div>
+                </div>
+                <div class="logo-coins-container">
+                    <div
+                        class="item-group"
+                        xyz="fade-100% up-3 in-delay-52 in-duration-8 out-duration-0"
+                    >
+                        <img src="/public/img/logo_coins.png" alt="Logo Coins" class="xyz-out" />
+                    </div>
+                </div>
+                <div class="logo-bullet-left-container">
+                    <div
+                        class="item-group"
+                        xyz="fade-100% right-3 in-delay-52 in-duration-8 out-duration-0"
+                    >
+                        <div class="logo-bullet-left xyz-out"></div>
+                    </div>
+                </div>
+                <div class="logo-bullet-right-container">
+                    <div
+                        class="item-group"
+                        xyz="fade-100% left-3 in-delay-52 in-duration-8 out-duration-0"
+                    >
+                        <div class="logo-bullet-right xyz-out"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <nav class="nav">
             <div class="nav-content">
                 <div class="nav-logo">
@@ -102,7 +200,7 @@
                 thiết kế mang đậm văn hoá đường phố.
             </h1>
             <section class="section starter-section">
-                <div class="starter-images-container">
+                <!-- <div class="starter-images-container">
                     <div
                         style="
                             position: absolute;
@@ -239,7 +337,7 @@
                             <img src="public/img/signature_y.png" alt="Image" style="width: 100%" />
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="starter-logo-without-text-container">
                     <div
@@ -268,6 +366,7 @@
                     >
                         <div class="starter-logo-made-in-vietnam xyz-out">madeinvietnam</div>
                     </div>
+
                     <div class="starter-logo-swipe-down-container">
                         <div class="item-group" xyz="fade-100% down-3 in-delay-30 out-duration-0">
                             <div class="starter-logo-swipe-down xyz-out">
